--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Todo App</string>
-    <string name="facebook_app_id">254228606673431</string>
-    <string name="fb_login_protocol_scheme">fb254228606673431</string>
+    <string name="app_name">Brooky AI</string>
+    <string name="facebook_app_id">2559523267704447</string>
+    <string name="fb_login_protocol_scheme">fb2559523267704447</string>
 </resources>
