--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Brooky AI</string>
     <string name="facebook_app_id">2559523267704447</string>
     <string name="fb_login_protocol_scheme">fb2559523267704447</string>
+    <string name="facebook_client_token">cd4699a3e3f9fd5d38914e735ae1021c</string>
 
     <string name="default_web_client_id">857388716055-ue1bu6tjjkajvgvf5fbe8aka945505dr.apps.googleusercontent.com</string>
 </resources>
